--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -9,8 +9,8 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-  <div class="row p-0">
-    <div class="col p-0">
+  <div class="row">
+    <div class="col">
       <app-footer></app-footer>
     </div>
   </div>
