--- a/app/src/app/core/components/footer/containers/footer.component.html
+++ b/app/src/app/core/components/footer/containers/footer.component.html
@@ -1,12 +1,10 @@
 <footer class="footer mt-auto py-3 color">
-    <div class="container">
+    <div class="container justify-content-center">
       <div class="row" id="credits">
-        <p class="text-white">FunnySail</p>
+        <p class="text-white">La Liga - by Andrés Rojas</p>
       </div>
       <div class="row" id="copyRight">
         <p class="text-white">Copyright &copy; 2021</p>
-      </div>
-      <div class="row justify-content-left" >
         <form [formGroup]="form" id="selectLanguage">
           <mat-form-field appearance="outline">
             <mat-label>{{'language.language' | translate}}</mat-label>
