--- a/app/src/app/core/components/header/containers/header.component.html
+++ b/app/src/app/core/components/header/containers/header.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#" style="font-family: 'Lobster', cursive; font-size: 2.25em;">
-      <img src="./assets/logoTFM.png" width="47.5" alt="" class="d-inline-block align-middle mr-2" style="filter: invert(100);">
-      Funny Sail
+      <img src="../../../../../assets/images/Liga-logo.png" width="125" alt="" class="d-inline-block align-middle mr-2" style="filter: invert(100);">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,21 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" aria-current="page" [routerLink]="['boats']">{{'header.boats' | translate}}</a>
+          <a class="nav-link" aria-current="page" [routerLink]="['teams']">{{'header.teams' | translate}}</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" aria-current="page" [routerLink]="['services']">{{'header.services' | translate}}</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" aria-current="page" [routerLink]="['activities']">{{'header.activities' | translate}}</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" aria-current="page" [routerLink]="['contact-us']">{{'header.contactUs' | translate}}</a>
-        </li>
-        <li class="nav-item" [routerLinkActive]="['active']">
-          <a class="nav-link" aria-current="page" [routerLink]="['booking']">
-            <mat-icon>shopping_cart</mat-icon>
-          </a>
+          <a class="nav-link" aria-current="page" [routerLink]="['players']">{{'header.players' | translate}}</a>
         </li>
       </ul>
     </div>
