--- a/app/src/app/pages/players/containers/players.component.html
+++ b/app/src/app/pages/players/containers/players.component.html
@@ -1,13 +1,13 @@
 <loading [loading]="loading"></loading>
 <div class="container" style="margin-top:8%;" *ngIf="!loading">
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-3" *ngFor="let player of players; let i = index">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-3" *ngFor="let player of players">
         <div class="card mb-3">
-          <img class="card-img-top img-card" src="{{images[i] | withoutPhoto}}" alt="Card image cap">
+          <img class="card-img-top img-card" src="{{player.image | withoutPhoto}}" alt="Card image cap">
           <div class="card-body">
             <h2><strong>{{player.name}}</strong></h2>
             <p>{{'players.age' | translate}} : {{player.age}}</p>
-            <p>{{'players.position' | translate}} : {{player.position}}</p>
+            <p>{{'players.position' | translate}} : {{player.position ?  player.position.name : ''}}</p>
           </div>
         </div>
       </div>
