--- a/app/src/app/pages/team/containers/team.component.html
+++ b/app/src/app/pages/team/containers/team.component.html
@@ -2,16 +2,22 @@
 <div class="container" style="margin-top:100px; padding-bottom: 70px;" *ngIf="!loading">
   <div class="row">
     <div class="col-md">
-      <img src="{{image | withoutPhoto}}" alt="boat" style="width:90%;">
+      <img src="{{team.shield | withoutPhoto}}" alt="boat" style="width:90%;">
     </div>
     <div class="col-md">
       <p class="h2">{{team.name}}</p>
       <hr>
       <div class="container">
         <div class="row">
-          <div class="col-md" style="text-align: center;">
-            <img alt='Capacity icon' src="assets/capacity.png" width="35" style="margin-bottom:10px;">
-            <p>{{team.capacity}} {{'boats.people' | translate}}</p>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3" *ngFor="let player of team.players">
+            <div class="card mb-3">
+              <img class="card-img-top img-card" src="{{player.image | withoutPhoto}}" alt="Card image cap">
+              <div class="card-body">
+                <h2><strong>{{player.name}}</strong></h2>
+                <p>{{'players.age' | translate}} : {{player.age}}</p>
+                <p>{{'players.position' | translate}} : {{player.position ?  player.position.name : ''}}</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
