--- a/app/src/app/pages/teams/containers/teams.component.html
+++ b/app/src/app/pages/teams/containers/teams.component.html
@@ -1,11 +1,11 @@
 <loading [loading]="loading"></loading>
 <div class="container" style="margin-top:8%;" *ngIf="!loading">
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-4 col-lg-3" *ngFor="let team of teams; let i = index">
+      <div class="col-12 col-sm-12 col-md-4 col-lg-3" *ngFor="let team of teams">
         <div class="card mb-3">
-          <img class="card-img-top img-card" src="{{images[i] | withoutPhoto}}" alt="Card image cap">
+          <img class="card-img-top img-card" src="{{team.shield | withoutPhoto}}" alt="Card image cap">
           <div class="card-body">
-            <a class="card-title" [routerLink]="['/team/{{team.id}}']"><h2><strong>{{team.name}}</strong></h2></a>
+            <a class="card-title" routerLink="/team/{{team.id}}"><h2><strong>{{team.name}}</strong></h2></a>
           </div>
         </div>
       </div>
